# corinthia-flat

./: CMakeLists.txt  README.md
src/: BuildGrammar.c  BuildGrammar.h  Builtin.c  Builtin.h  Common.h  Expression.c  Expression.h  Grammar.c  Grammar.h  Parser.c  Parser.h  Term.c  Term.h  Util.c  Util.h  flat.c
